Please view this file on the master branch, on stable branches it's out of date.

Not yet released
* Remove TrustBuddy since they're no longer in business
* Remove unused class MobilbankenBase

v1.9.10.10 (2016-10-17)
* Fixes crash for Amex
* Strikethrough balance in widget indicates update problems. 

v1.9.10.9 (2016-10-12)
* Länsförsäkringar: Remove broken web links
* Improve Javadocs in the Bank class
* Make successfully refreshing a disabled bank re-enable it
* Östgötatrafiken: Update certificate
* Östgötatrafiken: Adapt to changed web page
* Skip Server Name Indication (SNI) when refreshing bank certificates to avoid certificate mismatches (bankdroid doesn't use SNI)
* Ticket Rikskortet: Adapt to changed web page
* Removes IcaBanken since they now require BankID
* SveaDirekt: Adapt to changed web page
* Rikslunchen: Adapt to new web service
* AmericanExpress: Use their mobile API

v1.9.10.8 (2016-09-29)
* Add a Volatile account to the Test Bank that always changes its balance.
* Fix widget not updating when the balance change was lower than the notification threshold.

v1.9.10.7 (2016-08-18)
* Update certificates for AmericanExpress and Coop

v1.9.10.6 (2016-08-01)
* Update outdated certificates
* Upgrade to android-build-tools v.24
* Upgrade to gradle 2.14

v1.9.10.5 (2016-04-03)
* Fix for OKQ8
* Update certificates for AmericanExpress, DankeBank, FirstCard, Rikslunchen and SveaDirekt.

v1.9.10.4 (2016-02-25)
* Removes support for EspressoHouse
* Adds support Högskolerestaurangers kund-/studentkort
* Update certificates for American Express, Marginalen, PayPal, Ticket Rikskortet, Zidisha, Östgötatrafiken

v1.9.10.3 (2015-12-24)
* Fix for Länsförsäkringar

v1.9.10.2 (2015-12-22)
* Fixes for Coop login.
* Removes support for Forex Bank due to BankId requirement.
* Fixes for MinPension login.
* Update certificates for Coop, ICA, Osuuspankki, PlusGirot, SevenDay, Meniga & Steam.
* Fixes for Bredband2.
* Added support for Android 6.0 Marshmallow.
