@@ -74,7 +74,7 @@
                 android:id="@+id/btnSettingsCancel"
                 style="@style/Menu_Button"
                 android:drawableLeft="@drawable/button_cancel"
-                android:text="@string/cancel"></Button>
+                android:text="@android:string/cancel"></Button>
 
             <ImageView
                 android:layout_width="wrap_content"
